--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cheerio": "^0.19.0",
     "cors": "^2.7.1",
     "express": "^4.13.3",
+    "errorhandler": "^1.4.3",
     "q": "^1.4.1",
     "request": "^2.67.0"
   },
